[TASK] Correct spacing on news list

--- a/Extensions/news/Resources/Public/Scss/general.scss
+++ b/Extensions/news/Resources/Public/Scss/general.scss
@@ -21,7 +21,7 @@
   }
 }
 .news-list-item {
-  &.pp-news-list-item-imagetop img {
+  img {
     margin-bottom: 1.5rem;
   }
   &:nth-last-child(n+2) {
